# letsplaymc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  build.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/backend/: config.py  log.py  setup.py
src/backend/path/: path.py
src/backend/server/: mondrith.py  project.py  rcon.py  server.py
tests/: test_basic.py
