[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "letsplaymc"
version = "0.1.0"
description = "Desktop Minecraft server manager — create, launch, and mod local servers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["minecraft", "server-manager", "modrinth", "pywebview"]
authors = [
  { name = "LetsPlayMC Contributors" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: GTK",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
]

dependencies = [
  "platformdirs>=3.0",
  "pywebview>=4.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/letsplaymc"
Repository = "https://github.com/anomalyco/letsplaymc"
Issues = "https://github.com/anomalyco/letsplaymc/issues"

[project.optional-dependencies]
dev = ["ruff>=0.3"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
build = ["nuitka>=2.0"]
all = ["letsplaymc[dev,test,build]"]

[project.scripts]
letsplaymc = "src.main:main"

[tool.setuptools]
packages = { find = { where = ["src"], include = ["backend*"] } }
package-dir = { "" = "src" }

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
